# msgspec-stac

./: msgspec_stac.py  pyproject.toml
